bk_ida/gccida/g2/gen_sequence
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5052:4: error: expected ';' after expression
rtx v5; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5052:5: error: use of undeclared identifier 'v5'
rtx v5; // r8 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5053:4: error: expected ';' after expression
rtx v6; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5053:5: error: use of undeclared identifier 'v6'
rtx v6; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5054:6: error: use of undeclared identifier 'v7'
rtx *v7; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5069:14: error: expected ';' after return statement
return ( rtx)x_first_insn[2]; 
             ^
             ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5076:1: error: use of undeclared identifier 'v5'
v5 = gen_rtx_fmt_E( SEQUENCE, VOIDmode, v4); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5077:1: error: use of undeclared identifier 'v6'
v6 = cfun->emit->x_first_insn; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5078:6: error: use of undeclared identifier 'v6'
if ( v6 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5080:1: error: use of undeclared identifier 'v7'
v7 = ( rtx *)( v5->fld[0].rtwint + 8); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5080:13: error: expected expression
v7 = ( rtx *)( v5->fld[0].rtwint + 8); 
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5080:16: error: use of undeclared identifier 'v5'
v7 = ( rtx *)( v5->fld[0].rtwint + 8); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5083:2: error: use of undeclared identifier 'v7'
*v7 = v6; 
 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5083:7: error: use of undeclared identifier 'v6'
*v7 = v6; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5084:1: error: use of undeclared identifier 'v6'
v6 = v6[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5084:6: error: use of undeclared identifier 'v6'
v6 = v6[1].fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5085:3: error: use of undeclared identifier 'v7'
++v7; 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5087:9: error: use of undeclared identifier 'v6'
while ( v6 ); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/emit-rtl.c:5089:8: error: use of undeclared identifier 'v5'
return v5; 
       ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sequence/src/obj/emit-rtl.o] Error 1
